--- a/style.css
+++ b/style.css
@@ -6,7 +6,89 @@ html, body {
 body {
     margin: 0;
 
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+
     font-family: 'Kumbh Sans', sans-serif;
+    color: hsl(229, 23%, 23%);
+
+    background: hsl(185, 75%, 39%);
+}
+
+.card {
+    margin: auto;
+
+    position: relative;
+    width: 375px;
+
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+
+    background: white;
+    border-radius: 16px;
+}
+
+.card-header {
+    width: 100%;
+
+    object-fit: cover;
+
+    border-radius: 16px 16px 0 0;
+}
+
+.avatar {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 0);
+
+    border-radius: 100%;
+}
+
+.card-footer {
+    width: 100%;
+
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.stats {
+    padding: 16px;
+
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.stats > p {
+
+}
+
+.stat-count {
+    margin: 0 auto;
+
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.stat-name {
+    margin: 8px auto;
+
+    font-size: 12px;
+    color: hsl(227, 10%, 46%)
+}
+
+.divider {
+    width: 100%;
+
+    border: 1px solid hsl(227, 10%, 46%);
 }
 
 .attribution { font-size: 11px; text-align: center; }
