--- a/style.css
+++ b/style.css
@@ -40,13 +40,21 @@ body {
     border-radius: 16px 16px 0 0;
 }
 
+.card-content {
+    margin: 64px auto 0 auto;
+}
+
 .avatar {
+    padding: 4px;
+
     position: absolute;
-    top: 50%;
+    top: 25%;
     left: 50%;
-    transform: translate(-50%, 0);
+    transform: translate(-50%, 0%);
 
     border-radius: 100%;
+
+    background: white;
 }
 
 .card-footer {
@@ -67,10 +75,6 @@ body {
     align-items: center;
 }
 
-.stats > p {
-
-}
-
 .stat-count {
     margin: 0 auto;
 
@@ -88,7 +92,7 @@ body {
 .divider {
     width: 100%;
 
-    border: 1px solid hsl(227, 10%, 46%);
+    border: 1px solid hsl(0, 0%, 59%);
 }
 
 .attribution { font-size: 11px; text-align: center; }
