--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     align-items: center;
 
     font-family: 'Kumbh Sans', sans-serif;
-    color: hsl(229, 23%, 23%);
+    color: hsl(227, 10%, 46%);
 
     background: hsl(185, 75%, 39%);
 }
@@ -21,7 +21,7 @@ body {
     margin: auto;
 
     position: relative;
-    width: 375px;
+    width: 326px;
 
     display: flex;
     flex-flow: column nowrap;
@@ -42,13 +42,28 @@ body {
 
 .card-content {
     margin: 64px auto 0 auto;
+
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.name, .stat-count {
+    font-size: 18px;
+    font-weight: 700;
+    color: hsl(229, 23%, 23%);
+}
+
+.city {
+    margin: 0 auto 16px auto;
 }
 
 .avatar {
     padding: 4px;
 
     position: absolute;
-    top: 25%;
+    top: 20%;
     left: 50%;
     transform: translate(-50%, 0%);
 
@@ -67,7 +82,7 @@ body {
 }
 
 .stats {
-    padding: 16px;
+    margin: 16px;
 
     display: flex;
     flex-flow: column nowrap;
@@ -77,22 +92,18 @@ body {
 
 .stat-count {
     margin: 0 auto;
-
-    font-size: 18px;
-    font-weight: 700;
 }
 
 .stat-name {
     margin: 8px auto;
 
     font-size: 12px;
-    color: hsl(227, 10%, 46%)
 }
 
 .divider {
     width: 100%;
 
-    border: 1px solid hsl(0, 0%, 59%);
+    border: 1px solid hsla(0, 0%, 59%, 0.15);
 }
 
 .attribution { font-size: 11px; text-align: center; }
