--- a/style.css
+++ b/style.css
@@ -14,7 +14,17 @@ body {
     font-family: 'Kumbh Sans', sans-serif;
     color: hsl(227, 10%, 46%);
 
-    background: hsl(185, 75%, 39%);
+    background-color: hsl(185, 75%, 39%);
+}
+
+.pattern-top {
+    position: fixed;
+    transform: translate(-50%, -40%);
+}
+
+.pattern-bottom {
+    position: fixed;
+    transform: translate(40%, 50%);
 }
 
 .card {
@@ -34,6 +44,7 @@ body {
 
 .card-header {
     width: 100%;
+    height: 100%;
 
     object-fit: cover;
 
