--- a/style.css
+++ b/style.css
@@ -117,5 +117,18 @@ body {
     border: 1px solid hsla(0, 0%, 59%, 0.15);
 }
 
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
+footer {
+    padding: 16px 0;
+
+    z-index: 10;
+}
+
+.attribution {
+    font-size: 12px;
+    text-align: center;
+    color: hsl(229, 23%, 23%);
+}
+
+.attribution a {
+    color: hsl(228, 45%, 44%);
+}
